# libsp

./: .gitignore  .travis.yml  Makefile.am  README  README.md  complexmultiply.h  configure.ac  estimator.h  filter.h  fir.h  fir_regression.cc  fir_regression.h  iir.h  iir_regression.cc  iir_regression.h  iir_regression.m  main.cc
autotools/: Makefile.am
src/: estimator.h  fixed.h  misc.hpp  runningstats.hpp
test/: main.cc
test/estimator/: CMakeLists.txt  main.cc
test/runningstats/: CMakeLists.txt  main.cc
